fully updated rotational page. Fixed issues with the padding marging etc. redesgned suggestion section of the rotation page. techiques code fixed to make it more readable. modified style to match the color scheme

--- a/css/style.css
+++ b/css/style.css
@@ -2074,6 +2074,12 @@ a.btn.disabled,
 fieldset:disabled a.btn {
   pointer-events: none; }
 
+.fa-check {
+	/*color: red;*/
+	font-size: 100px;
+	
+}
+
 .btn-amazing-techniques {
 	color: #fff;
     background-color: #4e9525;
